--- a/style.css
+++ b/style.css
@@ -4,16 +4,29 @@
 /*===== Variables =====*/
 :root {
     --clr-primary: #16202a;
-    --clr-secondary: #599dd3;
-    --clr-third: #549288;
-    --clr-fourth: #dc3545;
-    --clr-dark: #16202a;
     --clr-light: #f8f9fa;
+    --clr-gray: #bbbbbb;
+    --big-font-size: 6rem;
+    --h2-font-size: 3rem;
     --font-bold: 700;
     --font-normal: 400;
     --max-width: 1170px;
     --fixed-width: 600px;
     --transition: all .3s linear;
+}
+
+@media only screen and (max-width: 1200px) {
+    :root {
+        --big-font-size: 4rem;
+        --h2-font-size: 2rem;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    :root {
+        --big-font-size: 3rem;
+        --h2-font-size: 1rem;
+    }
 }
 
 /*===== Global Styles =====*/
@@ -33,7 +46,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: var(--font-normal);
-    color: var(--clr-dark);
+    color: var(--clr-primary);
 }
 
 h1,
@@ -47,9 +60,8 @@ a {
 
 img {
     max-width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
-    display: inline-block;
 }
 
 main {
@@ -98,12 +110,12 @@ aside {
 }
 
 .nav_menu a:hover {
-    background-color: #cbcbcb;
+    background-color: var(--clr-gray);
     color: var(--clr-primary);
 }
 
 .nav_menu a.active {
-    background-color: var(--clr-dark);
+    background-color: var(--clr-primary);
     color: var(--clr-light);
 }
 
@@ -114,8 +126,8 @@ aside {
     display: grid;
     place-items: center;
     text-align: center;
-    font-size: 6rem;
-    color: #757575;
+    font-size: var(--big-font-size);
+    color: var(--clr-gray);
     position: relative;
 }
 
@@ -149,7 +161,7 @@ aside {
 }
 
 .hero p {
-    font-size: 3rem;
+    font-size: var(--h2-font-size);
 }
 
 .social_top {
@@ -166,7 +178,7 @@ aside {
 
 .social_top a {
     font-size: 2rem;
-    color: #757575;
+    color: var(--clr-gray);
     width: 40px;
     height: 40px;
     display: flex;
@@ -186,14 +198,14 @@ h2 {
 }
 
 h2 span {
-    color: #757575;
+    color: var(--clr-gray);
 }
 
 .about_img {
     max-width: 400px;
     height: 400px;
     border-radius: 50%;
-    background-color: #eeeeee;
+    background-color: var(--clr-gray);
 }
 
 .about_img img {
@@ -231,7 +243,8 @@ h2 span {
 }
 
 /*===== Skills =====*/
-.skills, .contact{
+.skills,
+.contact {
     background-color: var(--clr-primary);
     color: var(--clr-light);
 }
@@ -240,6 +253,7 @@ h2 span {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 2rem;
     margin-bottom: 2rem;
 }
@@ -302,7 +316,12 @@ h2 span {
     gap: 1rem;
 }
 
-.project_wrapper .project, .project>div img {
+.project_wrapper>div{
+    flex: calc(50% - .5rem);
+}
+
+.project_wrapper .project,
+.project>div img {
     border-radius: 5px;
     height: calc(((100vw / 2) / 16) * 6);
     display: grid;
@@ -358,6 +377,9 @@ h2 span {
 
 .project_links {
     margin: 2rem 0 0 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .project_info a {
@@ -384,59 +406,63 @@ h2 span {
     border-color: var(--clr-light);
 }
 
-.project_links a:last-child{
+.project_links a:last-child {
     background-color: transparent;
     color: var(--clr-light);
     border-color: var(--clr-light);
 }
 
-.project_links a:last-child:hover{
+.project_links a:last-child:hover {
     background-color: var(--clr-light);
     color: var(--clr-primary);
     border-color: transparent;
 }
 
 /*===== Contact =====*/
-.contact_wrapper{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    color: #757575;
+.contact_wrapper {
+    display: flex;
+    color: var(--clr-gray);
 }
 
-.contact_wrapper > div{
+.contact_wrapper>div {
     display: grid;
-    align-content: center;
+    place-content: center;
+    flex: 50%;
 }
 
-.contact_wrapper img{
+.contact_wrapper>div:first-child {
+    margin-left: 2rem;
+}
+
+.contact_wrapper img {
     width: 70%;
 }
 
-.contact_wrapper p{
+.contact_wrapper p {
     display: flex;
     align-items: center;
     margin: .5rem 0;
 }
 
 
-.contact_wrapper p i{
+.contact_wrapper p i {
     margin-right: 2rem;
     color: var(--clr-light);
     font-size: 2rem;
 }
 
-.contact_wrapper p a{
-    color: #757575;
+.contact_wrapper p a {
+    color: var(--clr-gray);
     margin-left: .5rem;
 }
 
-.contact_wrapper p :hover{
+.contact_wrapper p :hover {
     color: var(--clr-light);
 }
 
-.social_contact a{
+.social_contact a {
     font-size: 2rem;
-    color: #757575;
+    color: var(--clr-gray);
     width: 40px;
     height: 40px;
     display: flex;
@@ -444,13 +470,45 @@ h2 span {
     align-items: center;
 }
 
-.social_contact a:hover{
+.social_contact a:hover {
     color: var(--clr-light);
 }
 
-.social_contact{
+.social_contact {
     margin-top: 2rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+@media only screen and (max-width: 940px) {
+    .column {
+        width: 100%;
+        margin-bottom: 3rem;
+    }
+
+    .project_wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .project>div {
+        width: 90% !important;
+        min-width: 380px;
+        height: 350px;
+    }
+
+    .project img{
+        width: 100% !important;
+        height: 100% !important;
+    }
+
+    .contact_wrapper {
+        flex-direction: column-reverse;
+    }
+
+    .contact_wrapper img{
+        margin-top: -2rem;
+    }
+
 }
