--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ aside {
 }
 
 .nav_menu a {
-    display: block;
+    display: inline-block;
     width: 120px;
     height: 120px;
     display: grid;
@@ -202,13 +202,12 @@ h2 span {
 }
 
 .about_img {
-    max-width: 400px;
-    height: 400px;
     border-radius: 50%;
-    background-color: var(--clr-gray);
 }
 
 .about_img img {
+    max-width: 400px;
+    height: 400px;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -316,7 +315,7 @@ h2 span {
     gap: 1rem;
 }
 
-.project_wrapper>div{
+.project_wrapper>div {
     flex: calc(50% - .5rem);
 }
 
@@ -344,8 +343,7 @@ h2 span {
     color: var(--clr-light);
     position: absolute;
     top: 50%;
-    left: 50%;
-    right: -50%;
+    left: 30%;
     width: 70%;
     transform: translateY(-50%);
     opacity: 0;
@@ -428,14 +426,11 @@ h2 span {
     display: grid;
     place-content: center;
     flex: 50%;
+    margin: 0 !important;
 }
 
 .contact_wrapper>div:first-child {
     margin-left: 2rem;
-}
-
-.contact_wrapper img {
-    width: 70%;
 }
 
 .contact_wrapper p {
@@ -443,7 +438,6 @@ h2 span {
     align-items: center;
     margin: .5rem 0;
 }
-
 
 .contact_wrapper p i {
     margin-right: 2rem;
@@ -475,30 +469,51 @@ h2 span {
 }
 
 .social_contact {
-    margin-top: 2rem;
+    margin: 2rem 0;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
 @media only screen and (max-width: 940px) {
+    main{
+        margin-left: 100px !important;
+    }
+    aside {
+        width: 100px;
+    }
+
+    .nav_menu {
+        width: 100px;
+    }
+
+    .nav_menu a {
+        width: 100px;
+        height: 100px;
+        font-size: 1rem;
+    }
+
     .column {
         width: 100%;
         margin-bottom: 3rem;
     }
 
     .project_wrapper {
-        display: flex;
-        flex-direction: column;
+        grid-template-columns: 100%;
+        gap: 2rem;
+    }
+
+    .project{
+        height: 350px !important;
     }
 
     .project>div {
-        width: 90% !important;
+        width: 100% !important;
         min-width: 380px;
-        height: 350px;
+        height: 350px !important;
     }
 
-    .project img{
+    .project img {
         width: 100% !important;
         height: 100% !important;
     }
@@ -507,8 +522,52 @@ h2 span {
         flex-direction: column-reverse;
     }
 
-    .contact_wrapper img{
+    .contact_wrapper img {
         margin-top: -2rem;
     }
 
+}
+
+@media only screen and (max-width: 576px) {
+    main {
+        margin-left: 0 !important;
+    }
+
+    aside {
+        height: 60px;
+        bottom: 0 !important;
+        left: 0;
+        right: 0;
+        top: auto !important;
+        width: 100%;
+        z-index: 100;
+    }
+
+    .nav_menu {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .nav_menu li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 1;
+    }
+
+    .nav_menu a {
+        width: 100% !important;
+        height: 60px !important;
+    }
+
+    .nav_menu a span {
+        display: none !important;
+    }
+
+    .nav_menu a i {
+        font-size: 1.5rem !important;
+        margin: 0;
+    }
 }
