--- a/style.css
+++ b/style.css
@@ -570,4 +570,9 @@ h2 span {
         font-size: 1.5rem !important;
         margin: 0;
     }
+
+    .about_img img{
+        max-width: 360px;
+        height: 360px;
+    }
 }
